<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <include layout="@layout/header" 
        android:layout_marginBottom="20dp"
    />
    
    <TextView 
        android:text="@string/busqueda_simple"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <EditText
        android:id="@+id/busqueda_simple_input"
        android:inputType="text"
        android:hint="@string/ingrese_autor_titulo_materias_etc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView 
        android:text="@string/buscar_en"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <Spinner 
        android:id="@+id/bibliotecas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" 
        android:prompt="@string/todas_las_bibliotecas"/>
    
    <Button android:text="@string/buscar"
        android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:id="@+id/buscar_libro"
     	style="@style/botonPrincipal"
     	android:layout_marginTop="10dp"
     	android:layout_gravity="right"
     	android:layout_marginRight="5dp" />
    
</LinearLayout>